# t00t

./: .gitignore  CMakeLists.txt  CONTEXT.md  Makefile  architecture.md  building.md  engine.md  groovebox.md  migration.md  readme.md
samples/: sararr1.h
samples/mallets/: marimba.h
samples/pianos/: ELECPIAN.h
samples/plucked/: sitar2.h  zither2.h
samples/strings/: lowstr5.h
samples/voiceiix/: ah2.h  arr.h  rrr.h
src/: audio_common.h  audio_engine.cpp  audio_engine.h  clap.h  controller.cpp  controller.h  engine.h  engine_base.h  envelope.cpp  envelope.h  filter.h  ladder.h  main.cpp  mixer.cpp  mixer.h  output.cpp  output.h  presets.h  samples.cpp  samples.h  voice.cpp  voice.h  voice_alloc.cpp  voice_alloc.h
src/boards/: breadboard_rp2350.h  vgaboard_rp2350.h
src/engines/groovebox/: audio_engine.cpp  display.cpp  engine.h  kit.h  midi_controller.cpp  patterns.h
src/engines/subtractive/: display.cpp  engine.h
src/fx/: delay.h  reverb.h
src/midi/: midi_controller.cpp  midi_controller.h  midi_parser.h  tusb_config.h  uart_midi.cpp  uart_midi.h  usb_descriptors.c  usb_midi.cpp  usb_midi.h
src/osc/: common.h  metal.h  noise.h  oscillator.h  polyblep.h  sample.h  sample_def.h  saw.h  saw_blep.h  sine.cpp  sine.h  square.h  square_blep.h  triangle.h
src/wslcd/: display.cpp  display.h  font8x8.h  gfx.cpp  gfx.h  lcd_st7789.cpp  lcd_st7789.h
